# activetextclassification

./: .gitignore  pyproject.toml  tree.txt
activetextclassification/: baseline.py  cold_start.py  config.py  models.py  visualization.py
activetextclassification/activetextclassification/: active_learner.py  data_preparation.py  embeddings.py  oracle.py  prompts.py  selection.py  utils.py  vectorizers.py  workflows.py
activetextclassification/optimization/: genetic_l0_optimizer.py  genetic_l0_optimizer_old_0.py  genetic_l0_optimizer_old_1.py
activetextclassification/visualization/: ag_plots.py
examples/: experimento_lo_ag.ipynb  l0 10000.ipynb  l0 100000.ipynb  l0 20000.ipynb  l0.ipynb
examples/ag_optimization_results_L0_10/: ag_best_l0_ACCURACY_MAXIMIZE.csv  ag_best_l0_ACCURACY_MINIMIZE.csv  ag_best_l0_F1_MAXIMIZE.csv  ag_best_l0_F1_MINIMIZE.csv  ag_detailed_fitnessACCURACY_MAXIMIZE.csv  ag_detailed_fitnessACCURACY_MINIMIZE.csv  ag_detailed_fitnessF1_MAXIMIZE.csv  ag_detailed_fitnessF1_MINIMIZE.csv
examples/ag_optimization_results_L0_100/: ag_best_l0_ACCURACY_MAXIMIZE.csv  ag_best_l0_ACCURACY_MINIMIZE.csv  ag_best_l0_F1_MAXIMIZE.csv  ag_best_l0_F1_MINIMIZE.csv  ag_detailed_fitnessACCURACY_MAXIMIZE.csv  ag_detailed_fitnessACCURACY_MINIMIZE.csv  ag_detailed_fitnessF1_MAXIMIZE.csv  ag_detailed_fitnessF1_MINIMIZE.csv
examples/ag_optimization_results_L0_1000/: ag_best_l0_F1_MINIMIZE.csv  ag_detailed_fitnessACCURACY_MAXIMIZE.csv  ag_detailed_fitnessACCURACY_MINIMIZE.csv  ag_detailed_fitnessF1_MAXIMIZE.csv  ag_detailed_fitnessF1_MINIMIZE.csv
examples/ag_optimization_results_L0_10000/: ag_best_l0_ACCURACY_MAXIMIZE.csv  ag_best_l0_ACCURACY_MINIMIZE.csv  ag_best_l0_F1_MAXIMIZE.csv  ag_best_l0_F1_MINIMIZE.csv  ag_detailed_fitnessACCURACY_MAXIMIZE.csv  ag_detailed_fitnessACCURACY_MINIMIZE.csv  ag_detailed_fitnessF1_MAXIMIZE.csv  ag_detailed_fitnessF1_MINIMIZE.csv
examples/ag_optimization_results_L0_20000/: ag_best_l0_ACCURACY_MAXIMIZE.csv  ag_best_l0_ACCURACY_MINIMIZE.csv  ag_best_l0_F1_MAXIMIZE.csv  ag_best_l0_F1_MINIMIZE.csv  ag_detailed_fitnessACCURACY_MAXIMIZE.csv  ag_detailed_fitnessACCURACY_MINIMIZE.csv  ag_detailed_fitnessF1_MAXIMIZE.csv  ag_detailed_fitnessF1_MINIMIZE.csv
examples/ag_optimization_results_L0_30000/: ag_best_l0_ACCURACY_MAXIMIZE.csv  ag_detailed_fitnessACCURACY_MAXIMIZE.csv  ag_detailed_fitnessACCURACY_MINIMIZE.csv  ag_detailed_fitnessF1_MAXIMIZE.csv
examples/ag_optimization_results_L0_50/: ag_best_l0_ACCURACY_MAXIMIZE.csv  ag_best_l0_ACCURACY_MINIMIZE.csv  ag_best_l0_F1_MAXIMIZE.csv  ag_best_l0_F1_MINIMIZE.csv  ag_detailed_fitnessACCURACY_MAXIMIZE.csv  (+3 more)
(+10 files in other folders)
